--- a/cube/styles.css
+++ b/cube/styles.css
@@ -92,8 +92,8 @@ body
 
 .icon
 {
-  width:38px;
-  height:38px;
+  width:50px;
+  height:50px;
   position:absolute;
 }
 
@@ -136,6 +136,51 @@ body
   width:232px;
   height:307px;
   position:absolute;
+}
+
+.equipList
+{
+  width:230px;
+  height:250px;
+  position:absolute;
+  z-index:200;
+}
+
+.equipListText
+{
+  font-family: 'Source Sans Pro',sans-serif;
+  font-size: 0.75em;
+  margin-top:22px;
+  margin-left:10px;
+  margin-right:10px;
+  margin-bottom:10px;
+  overflow-y:scroll;
+  height:87%;
+}
+
+.equipListItem
+{
+  width:100%;
+}
+
+.equipListItem:hover
+{
+  background-color:#FFEE88;
+}
+
+.noselect {
+  -webkit-touch-callout: none; /* iOS Safari */
+  -webkit-user-select: none;   /* Chrome/Safari/Opera */
+  -khtml-user-select: none;    /* Konqueror */
+  -moz-user-select: none;      /* Firefox */
+  -ms-user-select: none;       /* Internet Explorer/Edge */
+  user-select: none;           /* Non-prefixed version, currently
+                                  not supported by any browser */
+}
+
+.equipListItem:active
+{
+  background-color:#FFCC00;
 }
 
 .cubeWindow
@@ -181,8 +226,8 @@ body
 
 .tooltipimage
 {
-  width:38px;
-  height:38px;
+  width:50px;
+  height:50px;
   top:57px;
   left:38px;
   position:absolute;
@@ -529,13 +574,14 @@ body
 .preloaddiv
 {
   display:inline-block;
-  width:32px;
-  height:32px;
+  width:24px;
+  height:24px;
 }
 
 .credit
 {
   z-index:200;
+  text-align:right;
 }
 
 b
