--- a/cube/styles.css
+++ b/cube/styles.css
@@ -659,7 +659,10 @@ body
 .credit
 {
   z-index:200;
-  text-align:right;
+  text-align:center;
+  background-color:#FFECB3;
+  padding:3px;
+  box-shadow: 0px 0px 5px #888888;
 }
 
 b
