Adding character avatars

--- a/cube/styles.css
+++ b/cube/styles.css
@@ -18,8 +18,8 @@ b, u, i, center,
 dl, dt, dd, ol, ul, li,
 fieldset, form, label, legend,
 table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
 menu, nav, output, ruby, section, summary,
 time, mark, audio, video {
   margin: 0;
@@ -146,6 +146,12 @@ body
   left: 0;
   right: 0;
   margin: auto;
+}
+
+.character {
+  position: absolute;
+  top: -50px;
+  left: 260px;
 }
 
 .inventory
