--- a/daily-weekly-checklist/styles.css
+++ b/daily-weekly-checklist/styles.css
@@ -10,6 +10,14 @@
     background-color: #C8E6C9;
 }
 
+.checked-item-yellow {
+    background-color: #ffecb3;
+}
+
+.checked-item-red {
+    background-color: #ffcdd2;
+}
+
 .sortable-ghost {
     opacity: 0.2;
     background-color: #cccccc;
@@ -19,6 +27,10 @@
     font-size: 0.8em;
     color: #0288D1;
     cursor: pointer;
+}
+
+.black-text {
+    color: #666666;
 }
 
 .grayish-text {
