stygian + some assets for weapon element (not ready yet)

--- a/mhw-speedthumb/styles.css
+++ b/mhw-speedthumb/styles.css
@@ -369,3 +369,13 @@ input {
   position: relative;
   bottom: 33px;
 }
+
+.new {
+  color: #7E7;
+  font-size: 12px;
+}
+
+.no-space {
+  width: 0;
+  height: 0;
+}
