--- a/ak-randomizer/styles.css
+++ b/ak-randomizer/styles.css
@@ -55,3 +55,34 @@ body {
 .flex0 {
     flex: 0;
 }
+
+.operator-avatar {
+    width: 32px;
+    height: 32px;
+
+    image-rendering: -moz-crisp-edges;         /* Firefox */
+    image-rendering:   -o-crisp-edges;         /* Opera */
+    image-rendering: -webkit-optimize-contrast;/* Webkit (non-standard naming) */
+    image-rendering: crisp-edges;
+    -ms-interpolation-mode: nearest-neighbor;  /* IE (non-standard property) */
+
+    background: #ddd;
+    margin-bottom: 2px;
+}
+
+.operator-name {
+    margin-top: auto;
+    margin-bottom: auto;
+}
+
+.option-outer {
+    margin-bottom: 4px;
+}
+
+.option-text {
+    margin: auto;
+}
+
+.option-input {
+    
+}
