--- a/ak-guesser/styles.css
+++ b/ak-guesser/styles.css
@@ -145,12 +145,15 @@ body {
     width: 300px;
     border: 1px solid black;
     overflow: hidden;
-    margin-left: auto;
     display: flex
 }
 
 .skin-image {
     position: relative;
+}
+
+.loading-image {
+    
 }
 
 .skin-image-small {
