--- a/ak-guesser/styles.css
+++ b/ak-guesser/styles.css
@@ -164,8 +164,9 @@ body {
 }
 
 .skin-image-small {
-    max-height: 300px;
-    max-width: 300px;
+    height:100%;
+    width:100%;
+    object-fit: contain;
     margin: auto
 }
 
